[package]
name = "pid"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.3"
show-image = { version = "0.12.3", features = ["image", "save"]}
rand = "0.8.5"
rand_distr = "0.4.3"
plotters = "0.3"
tiff = "0.7.3"
terminal_size = "0.2.1"
termcolor = "1.1.3"
prettytable-rs = "^0.9"
clap = { version = "4.0.15", features = ["derive"] }
uuid = { version = "1.2.1", features = ["v4"] }
fft2d = "0.1.0"
rustfft = "6.0.1"
rustdct = { version = "0.6.0", optional = true }
